# mlops_main

./: LICENSE  Makefile  Mlops.ipynb  README.md  pyproject.toml
.dvc/: config
docs/: mkdocs.yml
docs/docs/: index.md
